# avatartalk-examples

./: .gitignore  API.md  README.md
nodejs/: README.md
nodejs/expressive-webchat/: .env.example  README.md
nodejs/expressive-webchat/src/: app.js  avatartalk_client.js  config.js  orchestrator.js
nodejs/expressive-webchat/templates/: index.ejs
nodejs/knowledge-base/: .env.example  README.md  package-lock.json  package.json
nodejs/knowledge-base/data/: avatartalk_knowledge_base.txt
nodejs/knowledge-base/src/: app.js  config.js  data.js  openai_client.js
nodejs/knowledge-base/templates/: index.html
nodejs/livekit-webchat/: .env.example  README.md  package-lock.json  package.json
nodejs/livekit-webchat/src/: app.js  avatartalk_ws.js  config.js  openai_client.js
nodejs/livekit-webchat/templates/: index.html
nodejs/simple-webchat/: .env.example  README.md  package-lock.json  package.json
nodejs/simple-webchat/src/: app.js  avatartalk_client.js  config.js  openai_client.js
nodejs/simple-webchat/templates/: index.html
nodejs/youtube-rtmp-streamer/: .env.example  README.md  package-lock.json  package.json  prompt.txt  topics.txt
nodejs/youtube-rtmp-streamer/src/: avatartalk.js  config.js  core.js  logger.js  main.js  youtube.js
python/: README.md
python/expressive-webchat/: .env.example  README.md  pyproject.toml  run.sh
python/expressive-webchat/data/: error_message.json  timeout_message.json
python/expressive-webchat/docs/: api-reference.md  architecture.md
python/expressive-webchat/src/: app.py  avatartalk_client.py  config.py  orchestrator.py
python/expressive-webchat/static/js/: client.js
python/expressive-webchat/templates/: index.html
python/knowledge-base/: .env.example  README.md  pyproject.toml
python/knowledge-base/src/knowledge_base/: __main__.py  app.py  config.py  data.py  openai_client.py
python/knowledge-base/templates/: index.html
python/livekit-agents/: README.md
python/livekit-webchat/: .env.example  README.md  pyproject.toml
python/livekit-webchat/src/livekit_webchat/: __main__.py  app.py  config.py
python/livekit-webchat/templates/: index.html
python/simple-webchat/: README.md  pyproject.toml
python/simple-webchat/src/simple_webchat/: __main__.py  app.py  avatartalk_client.py  config.py  openai_client.py
python/simple-webchat/templates/: index.html
python/youtube-rtmp-streamer/: .env.example  README.md  chat.prompt  main.py  narration.prompt  prompt.txt  pyproject.toml  run_streamer.sh  topics.txt
python/youtube-rtmp-streamer/livestream/: avatartalk.py  chat_handler.py  config.py  context_store.py  core.py  youtube.py
