[project]
name = "avatartalk-knowledge-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "requests>=2.32.3",
  "python-dotenv>=1.0.1",
  "openai>=1.46.0",
  "python-multipart>=0.0.20",
  "pypdf2>=3.0.1",
  "pandas>=2.3.3",
  "tqdm>=4.67.1",
]

[project.scripts]
knowledge-base-chat = "knowledge_base.__main__:main"

[tool.uv]
package = true
